2008-08-16  Edward Hervey  <edward.hervey@collabora.co.uk>

	* pitivi/threads.py:
	Added convenience CallbackThread class

2008-08-12  Edward Hervey  <edward.hervey@collabora.co.uk>

	* pitivi/bin.py:
	There's currently an issue with audio sources by which they do not
	properly reset when going to READY. We workaround this by forcing the
	sources to NULL and then back to READY before capturing.
	Name the various queues to make debugging easier.
	Increase the size of the queues.
	* pitivi/ui/webcam_managerdialog.py:
	Name the various queues to make debugging easier.
	Increase the size of the queues.

2008-08-10  Sarath Lakshman  <sarathlakshman@slynux.org>
        * pitivi/: ui/netstream_manager.py
	Rewrote with SmartBin

2008-07-30  Sarath Lakshman  <sarathlakshman@slynux.org>
	* pitivi/: ui/screencast_manager.glade, screencast_managerdialog.py
	Added basic istanbul integration [Screencast Capture] using dbus interface.

2008-07-20  Sarath Lakshman  <sarathlakshman@slynux.org>
	* pitivi/: bin.py
	Added record () for SmartCaptureBin; Couldn't implement tee successfully
	Modified self.vtee from identity to tee

2008-07-20  Sarath Lakshman  <sarathlakshman@slynux.org>
	* pitivi/: ui/webcam_managerdialog.py
	playing pipeline through draw_window success. Trying to use record() for SmartBin

2008-07-20  Sarath Lakshman  <sarathlakshman@slynux.org>
	* pitivi/: ui/webcam_managerdialog.py
	Attempt to rewrite webcam_managerdialog using PlayGround and SmartCaptureBin (Problem: cannot sync video to the drawing widget)

2008-07-18  Sarath Lakshman  <sarathlakshman@slynux.org>
	* pitivi/: ui/webcam_managerdialog.py, bin.py
	Added SmartCaptureBin and test degbug version of webcam_managerdialog (for debuging)

2008-07-18  Edward Hervey  <edward.hervey@collabora.co.uk>

	* pitivi/ui/viewer.py:
	Don't update time/duration if currently playing SmartBin doesn't have
	an associated objectfactory.

2008-07-15  Sarath Lakshman  <sarathlakshman@slynux.org>