@@ -1,3 +1,10 @@
+2008-08-19  Sarath Lakshman  <sarathlakshman@slynux.org>
+
+        * pitivi/bin.py:
+	        Added SinkBin, fixed naming for queues, increased queue size
+	* pitivi/ui/webcam_manager.py:
+		Implemented SinkBin, Added threads for recording
+
 2008-08-16  Edward Hervey  <edward.hervey@collabora.co.uk>
 
 	* pitivi/threads.py:
